Annotate "exnteds clause"

--- a/en/ch04.md
+++ b/en/ch04.md
@@ -187,7 +187,7 @@ A super call invokes the constructor of the base class on the instance reference
 processed as a function call (section 4.12) using the construct signatures of the base class constructor
 function type as the initial set of candidate signatures for overload resolution. Type arguments cannot be
 explicitly specified in a super call. If the base class is a generic class, the type arguments used to process a
-super call are always those specified in the extends clause that references the base class.
+super call are always those specified in the `extends` clause that references the base class.
 
 The type of a super call expression is Void.
 
@@ -483,7 +483,7 @@ The compile-time processing of a typed function call consists of the following s
 
 * First, a list of candidate signatures is constructed from the call signatures in the function type in
 declaration order. For classes and interfaces, inherited signatures are considered to follow
-explicitly declared signatures in extends clause order.
+explicitly declared signatures in `extends` clause order.
     * A non-generic signature is a candidate when
         * the function call has no type arguments, and
         * the signature is applicable with respect to the argument list of the function call.
