--- a/en/ch07.md
+++ b/en/ch07.md
@@ -113,7 +113,7 @@ common root (as defined in section 2.3) contribute to a single interface.
 When a generic interface has multiple declarations, all declarations must have identical type parameter
 lists, i.e. identical type parameter names with identical constraints in identical order.
 
-In an interface with multiple declarations, the extends clauses are merged into a single set of base types
+In an interface with multiple declarations, the `extends` clauses are merged into a single set of base types
 and the bodies of the interface declarations are merged into a single object type. Declaration merging
 produces a declaration order that corresponds to prepending the members of each interface declaration,
 in the order the members are written, to the combined list of members in the order of the interface
