--- a/en/ch08.md
+++ b/en/ch08.md
@@ -73,7 +73,7 @@ in the new expression refers to the constructor function object.
 
 ### 8.1.1 Class Heritage Specification
 
-The heritage specification of a class consists of optional extends and implements clauses. The extends
+The heritage specification of a class consists of optional `extends` and `implements` clauses. The extends
 clause specifies the base class of the class and the implements clause specifies a set of interfaces for
 which to validate the class provides an implementation.
 
@@ -91,7 +91,7 @@ ImplementsClause:
     implements ClassOrInterfaceTypeList
 ```
 
-A class that includes an extends clause is called a ***derived class***, and the class specified in the extends
+A class that includes an `extends` clause is called a ***derived class***, and the class specified in the extends
 clause is called the ***base class*** of the derived class. When a class heritage specification omits the extends
 clause, the class does not have a base class. However, as is the case with every object type, type
 references (section 3.3.1) to the class will appear to have the members of the global interface type named
@@ -100,7 +100,7 @@ references (section 3.3.1) to the class will appear to have the members of the g
 The following constraints must be satisfied by the class heritage specification or otherwise a compile-time
 error occurs:
 
-* If present, the type reference specified in the extends clause must denote a class type.
+* If present, the type reference specified in the `extends` clause must denote a class type.
 Furthermore, the *TypeName* part of the type reference is required to be a reference to the class
 constructor function when evaluated as an expression.
 * A class declaration may not, directly or indirectly, specify a base class that originates in the same
@@ -122,7 +122,7 @@ module Foo {
 }
 ```
 
-When evaluated as an expression, the type reference `A` in the extends clause doesn't reference the class
+When evaluated as an expression, the type reference `A` in the `extends` clause doesn't reference the class
 constructor function of `A` (instead it references the local variable `A`).
 
 The only situation in which the last two constraints above are violated is when a class overrides one or
@@ -425,7 +425,7 @@ class ColoredPoint extends Point {
 }
 ```
 
-Constructors of classes with no extends clause may not contain super calls, whereas constructors of
+Constructors of classes with no `extends` clause may not contain super calls, whereas constructors of
 derived classes must contain at least one super call somewhere in their function body. Super calls are not
 permitted outside constructors or in local functions inside constructors.
 
@@ -446,7 +446,7 @@ following the super call if the class is a derived class.
 
 If a class omits a constructor declaration, an ***automatic constructor*** is provided.
 
-In a class with no extends clause, the automatic constructor has no parameters and performs no action
+In a class with no `extends` clause, the automatic constructor has no parameters and performs no action
 other than executing the instance member variable initializers (section 8.4.1), if any.
 
 In a derived class, the automatic constructor has the same parameter list (and possibly overloads) as the
@@ -724,7 +724,7 @@ This section describes the structure of the JavaScript code generated from TypeS
 
 ### 8.6.1 Classes Without Extends Clauses
 
-A class with no extends clause generates JavaScript equivalent to the following:
+A class with no `extends` clause generates JavaScript equivalent to the following:
 
 ```javascript
 var <ClassName> = (function () {
@@ -843,7 +843,7 @@ the initializer expression.
 
 ### 8.6.2 Classes With Extends Clauses
 
-A class with an extends clause generates JavaScript equivalent to the following:
+A class with an `extends` clause generates JavaScript equivalent to the following:
 
 ```javascript
 var <ClassName> = (function (_super) {
@@ -876,7 +876,7 @@ var __extends = this.__extends || function(d, b) {
 }
 ```
 
-BaseClassName is the class name specified in the extends clause.
+BaseClassName is the class name specified in the `extends` clause.
 
 If the class has no explicitly declared constructor, the SuperCallStatement takes the form
 
