Annotate "implements clause"

--- a/en/ch02.md
+++ b/en/ch02.md
@@ -171,7 +171,7 @@ every internal module with the same root and the same qualified name relative to
 * The scope of a non-exported entity declared within an internal module declaration is the body
 of that internal module declaration.
 * The scope of a type parameter declared in a class or interface declaration is that entire
-declaration, including constraints, `extends` clause, implements clause, and declaration body,
+declaration, including constraints, `extends` clause, `implements` clause, and declaration body,
 but not including static member declarations.
 * The scope of a member declared in an enum declaration is the body of that declaration and every
 enum declaration with the same root and the same qualified name relative to that root.
