--- a/en/ch07.md
+++ b/en/ch07.md
@@ -11,7 +11,7 @@ Because TypeScript has a structural type system, an interface type with a partic
 considered identical to, and can be substituted for, another interface type or object type literal with an
 identical set of members (see section 3.8.2).
 
-Class declarations may reference interfaces in their implements clause to validate that they provide an
+Class declarations may reference interfaces in their `implements` clause to validate that they provide an
 implementation of the interfaces.
 
 ## 7.1 Interface Declarations
