--- a/en/ch08.md
+++ b/en/ch08.md
@@ -74,7 +74,7 @@ in the new expression refers to the constructor function object.
 ### 8.1.1 Class Heritage Specification
 
 The heritage specification of a class consists of optional `extends` and `implements` clauses. The extends
-clause specifies the base class of the class and the implements clause specifies a set of interfaces for
+clause specifies the base class of the class and the `implements` clause specifies a set of interfaces for
 which to validate the class provides an implementation.
 
 ```text
@@ -107,7 +107,7 @@ constructor function when evaluated as an expression.
 declaration. In other words a class cannot, directly or indirectly, be a base class of itself, regardless
 of type arguments.
 * The instance type (section 3.5.1) of the declared class must be assignable (section 3.8.4) to the
-base type reference and each of the type references listed in the implements clause.
+base type reference and each of the type references listed in the `implements` clause.
 * The constructor function type created by the class declaration must be assignable to the base
 class constructor function type, ignoring construct signatures.
 
@@ -130,7 +130,7 @@ more base class members with incompatible new members.
 
 Note that because TypeScript has a structural type system, a class doesn't need to explicitly state that it
 implements an interface—it suffices for the class to simply contain the appropriate set of instance
-members. The implements clause of a class provides a mechanism to assert and validate that the class
+members. The `implements` clause of a class provides a mechanism to assert and validate that the class
 contains the appropriate sets of instance members, but otherwise it has no effect on the class type.
 
 ### 8.1.2 Class Body
