--- a/en/ch08.md
+++ b/en/ch08.md
@@ -73,7 +73,7 @@ in the new expression refers to the constructor function object.
 
 ### 8.1.1 Class Heritage Specification
 
-The heritage specification of a class consists of optional `extends` and `implements` clauses. The extends
+The heritage specification of a class consists of optional `extends` and `implements` clauses. The `extends`
 clause specifies the base class of the class and the `implements` clause specifies a set of interfaces for
 which to validate the class provides an implementation.
 
@@ -91,8 +91,8 @@ ImplementsClause:
     implements ClassOrInterfaceTypeList
 ```
 
-A class that includes an `extends` clause is called a ***derived class***, and the class specified in the extends
-clause is called the ***base class*** of the derived class. When a class heritage specification omits the extends
+A class that includes an `extends` clause is called a ***derived class***, and the class specified in the `extends`
+clause is called the ***base class*** of the derived class. When a class heritage specification omits the `extends`
 clause, the class does not have a base class. However, as is the case with every object type, type
 references (section 3.3.1) to the class will appear to have the members of the global interface type named
 `Object` unless those members are hidden by members with the same name in the class.
