Addnotate `this` of ch08

--- a/en/ch08.md
+++ b/en/ch08.md
@@ -69,7 +69,7 @@ var p: Point = new Point(10, 20);
 ```
 
 the identifier `Point` in the type annotation refers to the class instance type, whereas the identifier `Point`
-in the new expression refers to the constructor function object.
+in the `new` expression refers to the constructor function object.
 
 ### 8.1.1 Class Heritage Specification
 
@@ -168,11 +168,11 @@ body and the members inherited from the base class.
 Members are either ***instance members*** or ***static members***.
 
 Instance members are members of the class type (section 8.2.4) and its associated instance type. Within
-constructors, instance member functions, and instance member accessors, the type of this is the instance
+constructors, instance member functions, and instance member accessors, the type of `this` is the instance
 type (section 3.5.1) of the class.
 
 Static members are declared using the static modifier and are members of the constructor function type
-(section 8.2.5). Within static member functions and static member accessors, the type of this is the
+(section 8.2.5). Within static member functions and static member accessors, the type of `this` is the
 constructor function type.
 
 Class type parameters cannot be referenced in static member declarations.
@@ -220,7 +220,7 @@ member, or otherwise a compile-time error occurs.
 ### 8.2.4 Class Types
 
 A class declaration declares a new named type (section 3.5) called a class type. Within the constructor and
-member functions of a class, the type of this is the instance type (section 3.5.1) of this class type. The
+member functions of a class, the type of `this` is the instance type (section 3.5.1) of this class type. The
 class type has the following members:
 
 * A property for each instance member variable declaration in the class body.
@@ -383,7 +383,7 @@ The type parameters of a generic class are in scope and accessible in a construc
 
 Similar to functions, only the constructor implementation (and not constructor overloads) can specify
 default value expressions for optional parameters. It is a compile-time error for such default value
-expressions to reference this. For each parameter with a default value, a statement that substitutes the
+expressions to reference `this`. For each parameter with a default value, a statement that substitutes the
 default value for an omitted argument is included in the JavaScript generated for the constructor function.
 
 A parameter of a *ConstructorImplementation* may be prefixed with a public or private modifier. This is
@@ -436,7 +436,7 @@ The first statement in the body of a constructor must be a super call if both of
 variables with initializers.
 
 
-In such a required super call, it is a compile-time error for argument expressions to reference this.
+In such a required super call, it is a compile-time error for argument expressions to reference `this`.
 
 Initialization of parameter properties and instance member variables with initializers takes place
 immediately at the beginning of the constructor body if the class has no base class, or immediately
@@ -541,8 +541,8 @@ variable declaration (see section 5.1).
 
 An instance member variable declaration introduces a member in the class instance type and optionally
 initializes a property on instances of the class. Initializers in instance member variable declarations are
-executed once for every new instance of the class and are equivalent to assignments to properties of this
-in the constructor. In an initializer expression for an instance member variable, this is of the class
+executed once for every new instance of the class and are equivalent to assignments to properties of `this`
+in the constructor. In an initializer expression for an instance member variable, `this` is of the class
 instance type.
 
 A static member variable declaration introduces a property in the constructor function type and optionally
@@ -554,7 +554,7 @@ body but are not permitted to reference parameters or local variables of the con
 means that entities from outer scopes by the same name as a constructor parameter or local variable are
 inaccessible in initializer expressions for instance member variables.
 
-Since instance member variable initializers are equivalent to assignments to properties of this in the
+Since instance member variable initializers are equivalent to assignments to properties of `this` in the
 constructor, the example
 
 ```typescript
@@ -604,18 +604,18 @@ MemberFunctionImplementation:
 ```
 
 A member function declaration is processed in the same manner as an ordinary function declaration
-(section 6), except that in a member function this has a known type.
+(section 6), except that in a member function `this` has a known type.
 
 All overloads of a member function must have the same accessibility (public or private) and kind (instance
 or static).
 
 An instance member function declaration declares a property in the class instance type and assigns a
 function object to a property on the prototype object of the class. In the body of an instance member
-function declaration, this is of the class instance type.
+function declaration, `this` is of the class instance type.
 
 A static member function declaration declares a property in the constructor function type and assigns a
 function object to a property on the constructor function object. In the body of a static member function
-declaration, the type of this is the constructor function type.
+declaration, the type of `this` is the constructor function type.
 
 A member function can access overridden base class members using a super property access (section
 4.8.2). For example
@@ -638,7 +638,7 @@ class ColoredPoint extends Point {
 }
 ```
 
-In a static member function, this represents the constructor function object on which the static member
+In a static member function, `this` represents the constructor function object on which the static member
 function was invoked. Thus, a call to `new this()` may actually invoke a derived class constructor:
 
 ```typescript
@@ -688,11 +688,11 @@ Accessors for the same member name must specify the same accessibility.
 
 An instance member accessor declaration declares a property in the class instance type and defines a
 property on the prototype object of the class with a get or set accessor. In the body of an instance
-member accessor declaration, this is of the class instance type.
+member accessor declaration, `this` is of the class instance type.
 
 A static member accessor declaration declares a property in the constructor function type and defines a
 property on the constructor function object of the class with a get or set accessor. In the body of a static
-member accessor declaration, the type of this is the constructor function type.
+member accessor declaration, the type of `this` is the constructor function type.
 
 Get and set accessors are emitted as calls to `Object.defineProperty` in the generated JavaScript, as
 described in section 8.6.1.
