--- a/en/ch08.md
+++ b/en/ch08.md
@@ -171,7 +171,7 @@ Instance members are members of the class type (section 8.2.4) and its associate
 constructors, instance member functions, and instance member accessors, the type of `this` is the instance
 type (section 3.5.1) of the class.
 
-Static members are declared using the static modifier and are members of the constructor function type
+Static members are declared using the `static` modifier and are members of the constructor function type
 (section 8.2.5). Within static member functions and static member accessors, the type of `this` is the
 constructor function type.
 
@@ -429,12 +429,11 @@ Constructors of classes with no `extends` clause may not contain super calls, wh
 derived classes must contain at least one super call somewhere in their function body. Super calls are not
 permitted outside constructors or in local functions inside constructors.
 
-The first statement in the body of a constructor must be a super call if both of the following are true:
+The first statement in the body of a constructor *must* be a super call if both of the following are true:
 
 * The containing class is a derived class.
 * The constructor declares parameter properties or the containing class declares instance member
 variables with initializers.
-
 
 In such a required super call, it is a compile-time error for argument expressions to reference `this`.
 
@@ -471,13 +470,13 @@ PropertyMemberDeclaration:
     MemberAccessorDeclaration
 ```
 
-Member declarations without a static modifier are called instance member declarations. Instance
+Member declarations without a `static` modifier are called instance member declarations. Instance
 property member declarations declare properties in the class instance type (section 8.2.4), and must
 specify names that are unique among all instance property member and parameter property declarations
 in the containing class, with the exception that instance get and set accessor declarations may pairwise
 specify the same name.
 
-Member declarations with a static modifier are called static member declarations. Static property
+Member declarations with a `static` modifier are called static member declarations. Static property
 member declarations declare properties in the constructor function type (section 8.2.5), and must specify
 names that are unique among all static property member declarations in the containing class, with the
 exception that static get and set accessor declarations may pairwise specify the same name.
