public/private modifier

--- a/en/ch03.md
+++ b/en/ch03.md
@@ -771,7 +771,7 @@ RestParameter:
 Parameter names must be unique. A compile-time error occurs if two or more parameters have the same
 name.
 
-A parameter is permitted to include a public or private modifier only if it occurs in the parameter list of
+A parameter is permitted to include a `public` or `private` modifier only if it occurs in the parameter list of
 a *ConstructorImplementation* (section 8.3.1).
 
 A parameter with a type annotation is considered to be of that type. A type annotation for a rest
