--- a/en/ch08.md
+++ b/en/ch08.md
@@ -180,7 +180,7 @@ Class type parameters cannot be referenced in static member declarations.
 ### 8.2.2 Accessibility
 
 Property members have either ***public*** or ***private*** accessibility. The default is public accessibility, but
-property member declarations may include a public or private modifier to explicitly specify the desired
+property member declarations may include a `public` or `private` modifier to explicitly specify the desired
 accessibility.
 
 Public property members can be accessed everywhere, but private property members can be accessed
@@ -189,7 +189,7 @@ member outside the class body that contains its declaration results in a compile
 
 Private accessibility is enforced only at compile-time and serves as no more than an indication of intent.
 Since JavaScript provides no mechanism to create private properties on an object, it is not possible to
-enforce the private modifier in dynamic code at run-time. For example, private accessibility can be
+enforce the `private` modifier in dynamic code at run-time. For example, private accessibility can be
 defeated by changing an object's static type to Any and accessing the member dynamically.
 
 ### 8.2.3 Inheritance and Overriding
@@ -226,7 +226,7 @@ class type has the following members:
 * A property for each instance member variable declaration in the class body.
 * A property of a function type for each instance member function declaration in the class body.
 * A property for each uniquely named instance member accessor declaration in the class body.
-* A property for each constructor parameter declared with a public or private modifier.
+* A property for each constructor parameter declared with a `public` or `private` modifier.
 * An index signature for each instance index member declaration in the class body.
 * All base class instance type property or index members that are not overridden in the class.
 
@@ -366,7 +366,7 @@ ConstructorImplementation:
 A class may contain at most one constructor declaration. If a class contains no constructor declaration, an
 automatic constructor is provided, as described in section 8.3.3.
 
-Overloads and the implementation of a constructor may include a public or private accessibility modifier,
+Overloads and the implementation of a constructor may include a `public` or `private` accessibility modifier,
 but only public constructors are supported and private constructors result in an error.
 
 If a constructor declaration includes overloads, the overloads determine the construct signatures of the
@@ -386,7 +386,7 @@ default value expressions for optional parameters. It is a compile-time error fo
 expressions to reference `this`. For each parameter with a default value, a statement that substitutes the
 default value for an omitted argument is included in the JavaScript generated for the constructor function.
 
-A parameter of a *ConstructorImplementation* may be prefixed with a public or private modifier. This is
+A parameter of a *ConstructorImplementation* may be prefixed with a `public` or `private` modifier. This is
 called a ***parameter property declaration*** and is shorthand for declaring a property with the same name
 as the parameter and initializing it with the value of the parameter. For example, the declaration
 
