--- a/en/ch10.md
+++ b/en/ch10.md
@@ -162,12 +162,12 @@ becomes an instantiated module, for example by including a variable declaration 
 statement in `B` above would be an error because the expression `A` doesn't reference the module
 instance of module `A`.
 
-When an import statement includes an export modifier, all meanings of the local alias are exported.
+When an import statement includes an `export` modifier, all meanings of the local alias are exported.
 
 ## 10.4 Export Declarations
 
 An export declaration declares an externally accessible module member. An export declaration is simply a
-regular declaration prefixed with the keyword export.
+regular declaration prefixed with the keyword `export.`
 
 Exported class, interface, and enum types can be accessed as a *TypeName* (section 3.6.2) of the form M.T,
 where M is a reference to the containing module and T is the exported type name. Likewise, as part of a
