--- a/en/ch12.md
+++ b/en/ch12.md
@@ -132,7 +132,7 @@ AmbientModuleElement:
 ```
 
 Except for ImportDeclarations, *AmbientModuleElements* always declare exported entities regardless of
-whether they include the optional export modifier.
+whether they include the optional `export` modifier.
 
 ### 12.1.6 Ambient External Module Declarations
 
@@ -162,6 +162,6 @@ modules only through top-level external module names. Relative external module n
 permitted.
 
 If an ambient external module declaration includes an export assignment, it is an error for any of the
-declarations within the module to specify an export modifier. If an ambient external module declaration
+declarations within the module to specify an `export` modifier. If an ambient external module declaration
 contains no export assignment, entities declared in the module are exported regardless of whether their
-declarations include the optional export modifier.
+declarations include the optional `export` modifier.
