--- a/en/ch08.md
+++ b/en/ch08.md
@@ -739,14 +739,14 @@ var <ClassName> = (function () {
 })();
 ```
 
-ClassName is the name of the class.
+*ClassName* is the name of the class.
 
-ConstructorParameters is a comma separated list of the constructor's parameter names.
+*ConstructorParameters* is a comma separated list of the constructor's parameter names.
 
-DefaultValueAssignments is a sequence of default property value assignments corresponding to those
+*DefaultValueAssignments* is a sequence of default property value assignments corresponding to those
 generated for a regular function declaration, as described in section 6.5.
 
-ParameterPropertyAssignments is a sequence of assignments, one for each parameter property declaration
+*ParameterPropertyAssignments* is a sequence of assignments, one for each parameter property declaration
 in the constructor, in order they are declared, of the form
 
 ```javascript
@@ -755,19 +755,19 @@ this.<ParameterName> = <ParameterName>;
 
 where ParameterName is the name of a parameter property.
 
-MemberVariableAssignments is a sequence of assignments, one for each instance member variable
+*MemberVariableAssignments* is a sequence of assignments, one for each instance member variable
 declaration with an initializer, in the order they are declared, of the form
 
 ```javascript
 this.<MemberName> = <InitializerExpression>;
 ```
 
-where MemberName is the name of the member variable and InitializerExpression is the code generated
+where *MemberName* is the name of the member variable and *InitializerExpression* is the code generated
 for the initializer expression.
 
-ConstructorStatements is the code generated for the statements specified in the constructor body.
+*ConstructorStatements* is the code generated for the statements specified in the constructor body.
 
-MemberFunctionStatements is a sequence of statements, one for each member function declaration or
+*MemberFunctionStatements* is a sequence of statements, one for each member function declaration or
 member accessor declaration, in the order they are declared.
 
 An instance member function declaration generates a statement of the form
@@ -788,8 +788,8 @@ and static member function declaration generates a statement of the form
 }
 ```
 
-where MemberName is the name of the member function, and FunctionParameters,
-DefaultValueAssignments, and FunctionStatements correspond to those generated for a regular function
+where *MemberName* is the name of the member function, and *FunctionParameters*,
+*DefaultValueAssignments*, and *FunctionStatements* correspond to those generated for a regular function
 declaration, as described in section 6.5.
 
 A get or set instance member accessor declaration, or a pair of get and set instance member accessor
@@ -824,20 +824,20 @@ Object.defineProperty(<ClassName>, "<MemberName>", {
 };
 ```
 
-where MemberName is the name of the member accessor, GetAccessorStatements is the code generated
+where *MemberName* is the name of the member accessor, *GetAccessorStatements* is the code generated
 for the statements in the get acessor's function body, ParameterName is the name of the set accessor
-parameter, and SetAccessorStatements is the code generated for the statements in the set accessor's
+parameter, and *SetAccessorStatements* is the code generated for the statements in the set accessor's
 function body. The `get` property is included only if a get accessor is declared and the `set` property is
 included only if a set accessor is declared.
 
-StaticVariableAssignments is a sequence of statements, one for each static member variable declaration
+*StaticVariableAssignments* is a sequence of statements, one for each static member variable declaration
 with an initializer, in the order they are declared, of the form
 
 ```text
 <ClassName>.<MemberName> = <InitializerExpression>;
 ```
 
-where MemberName is the name of the static variable, and InitializerExpression is the code generated for
+where *MemberName* is the name of the static variable, and *InitializerExpression* is the code generated for
 the initializer expression.
 
 ### 8.6.2 Classes With Extends Clauses
@@ -875,25 +875,25 @@ var __extends = this.__extends || function(d, b) {
 }
 ```
 
-BaseClassName is the class name specified in the `extends` clause.
+*BaseClassName* is the class name specified in the `extends` clause.
 
-If the class has no explicitly declared constructor, the SuperCallStatement takes the form
+If the class has no explicitly declared constructor, the *SuperCallStatement* takes the form
 
 ```javascript
 _super.apply(this, arguments);
 ```
 
-Otherwise the SuperCallStatement is present if the constructor function is required to start with a super
+Otherwise the *SuperCallStatement* is present if the constructor function is required to start with a super
 call, as discussed in section 8.3.2, and takes the form
 
 ```javascript
 _super.call(this, <SuperCallArguments>)
 ```
 
-where SuperCallArguments is the argument list specified in the super call. Note that this call precedes the
+where *SuperCallArguments* is the argument list specified in the super call. Note that this call precedes the
 code generated for parameter properties and member variables with initializers. Super calls elsewhere in
 the constructor generate similar code, but the code generated for such calls will be part of the
-ConstructorStatements section.
+*ConstructorStatements* section.
 
 A super property access in the constructor, an instance member function, or an instance member accessor
 generates JavaScript equivalent to
