--- a/en/ch08.md
+++ b/en/ch08.md
@@ -753,7 +753,7 @@ in the constructor, in order they are declared, of the form
 this.<ParameterName> = <ParameterName>;
 ```
 
-where ParameterName is the name of a parameter property.
+where *ParameterName* is the name of a parameter property.
 
 *MemberVariableAssignments* is a sequence of assignments, one for each instance member variable
 declaration with an initializer, in the order they are declared, of the form
@@ -825,7 +825,7 @@ Object.defineProperty(<ClassName>, "<MemberName>", {
 ```
 
 where *MemberName* is the name of the member accessor, *GetAccessorStatements* is the code generated
-for the statements in the get acessor's function body, ParameterName is the name of the set accessor
+for the statements in the get acessor's function body, *ParameterName* is the name of the set accessor
 parameter, and *SetAccessorStatements* is the code generated for the statements in the set accessor's
 function body. The `get` property is included only if a get accessor is declared and the `set` property is
 included only if a set accessor is declared.
