--- a/en/ch09.md
+++ b/en/ch09.md
@@ -150,16 +150,16 @@ var <EnumName>;
 })(<EnumName>||(<EnumName>={}));
 ```
 
-EnumName is the name of the enum.
+*EnumName* is the name of the enum.
 
-EnumMemberAssignments is a sequence of assignments, one for each enum member, in order they are
+*EnumMemberAssignments* is a sequence of assignments, one for each enum member, in order they are
 declared, of the form
 
 ```typescript
 <EnumName>[<EnumName>["<MemberName>"] = <Value>] = "<MemberName>";
 ```
 
-where MemberName is the name of the enum member and Value is the assigned constant value or the
+where *MemberName* is the name of the enum member and *Value* is the assigned constant value or the
 code generated for the computed value expression.
 
 For example, the `Color` enum example from section 9.1 generates the following JavaScript:
