--- a/en/ch10.md
+++ b/en/ch10.md
@@ -162,17 +162,17 @@ becomes an instantiated module, for example by including a variable declaration 
 statement in `B` above would be an error because the expression `A` doesn't reference the module
 instance of module `A`.
 
-When an import statement includes an `export` modifier, all meanings of the local alias are exported.
+When an import statement includes an export modifier, all meanings of the local alias are exported.
 
 ## 10.4 Export Declarations
 
 An export declaration declares an externally accessible module member. An export declaration is simply a
-regular declaration prefixed with the keyword `export.`
+regular declaration prefixed with the keyword `export`.
 
-Exported class, interface, and enum types can be accessed as a *TypeName* (section 3.6.2) of the form M.T,
-where M is a reference to the containing module and T is the exported type name. Likewise, as part of a
-*TypeName*, exported modules can be accessed as a *ModuleName* of the form M.N, where M is a reference
-to the containing module and N is the exported module.
+Exported class, interface, and enum types can be accessed as a *TypeName* (section 3.6.2) of the form *M.T*,
+where *M* is a reference to the containing module and *T* is the exported type name. Likewise, as part of a
+*TypeName*, exported modules can be accessed as a *ModuleName* of the form *M.N*, where *M* is a reference
+to the containing module and *N* is the exported module.
 
 Exported variable, function, class, enum, module, and import alias declarations become properties on the
 module instance and together establish the module's ***instance type***. This unnamed type has the following
@@ -207,10 +207,10 @@ level of nesting.
 * A *TypeReference* directly depends on the type it references and on each *Type* specified as a type
 argument.
 
-A named type T having a root module R (section 2.3) is said to be ***at least as accessible as*** a member M if
+A named type *T* having a root module *R* (section 2.3) is said to be ***at least as accessible as*** a member *M* if
 
-* R is the global module or an external module, or
-* R is an internal module in the parent module chain of M.
+* *R* is the global module or an external module, or
+* *R* is an internal module in the parent module chain of *M*.
 
 In the example
 
@@ -339,7 +339,7 @@ var <ModuleName>;
 })(<ModuleName>||(<ModuleName>={}));
 ```
 
-where *ModuleName* is the name of the module and ModuleStatements is the code generated for the
+where *ModuleName* is the name of the module and *ModuleStatements* is the code generated for the
 statements in the module body. The *ModuleName* function parameter may be prefixed with one or more
 underscore characters to ensure the name is unique within the function body. Note that the entire module
 is emitted as an anonymous function that is immediately executed. This ensures that local variables are in
