--- a/en/ch11.md
+++ b/en/ch11.md
@@ -9,8 +9,8 @@ export syntax. We expect to align more closely on the syntax as the ECMAScript 6
 ## 11.1 Source Files
 
 A TypeScript ***program*** consists of one or more source files that are either ***implementation source files*** or
-***declaration source files***. Source files with extension `.ts` are ImplementationSourceFiles containing
-statements and declarations. Source files with extension `.d.ts` are DeclarationSourceFiles containing
+***declaration source files***. Source files with extension `.ts` are *ImplementationSourceFiles* containing
+statements and declarations. Source files with extension `.d.ts` are *DeclarationSourceFiles* containing
 declarations only. Declaration source files are a strict subset of implementation source files.
 
 ```text
@@ -76,7 +76,7 @@ into other modules using import declarations. Initialization order of external m
 the module loader being and is not specified by the TypeScript language. However, it is generally the case
 that non-circularly dependent modules are automatically loaded and initialized in the correct order.
 
-External modules can additionally be declared using AmbientModuleDeclarations in the global module
+External modules can additionally be declared using *AmbientModuleDeclarations* in the global module
 that directly specify the external module names as string literals. This is described further in section 12.1.6.
 
 ### 11.1.1 Source Files Dependencies
