--- a/en/ch12.md
+++ b/en/ch12.md
@@ -8,7 +8,7 @@ referencing a JavaScript library in a `<script/>` tag.
 
 ## 12.1 Ambient Declarations
 
-Ambient declarations are written using the declare keyword and can declare variables, functions, classes,
+Ambient declarations are written using the `declare` keyword and can declare variables, functions, classes,
 enums, internal modules, or external modules.
 
 ```text
@@ -131,7 +131,7 @@ AmbientModuleElement:
     export(opt) ImportDeclaration
 ```
 
-Except for ImportDeclarations, *AmbientModuleElements* always declare exported entities regardless of
+Except for *ImportDeclarations*, *AmbientModuleElements* always declare exported entities regardless of
 whether they include the optional `export` modifier.
 
 ### 12.1.6 Ambient External Module Declarations
